public/css/styles.css
html {
    overflow-y: scroll;
}

* {
    margin: 0;
    padding: 0;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 14px;
    color: #333333;
    line-height: 1.5;
    text-size-adjust: 100%;
}

body {
    background-color: #f8f8f8;
}

a {
    text-decoration: none;
}

textarea {
    resize: vertical;
}

#wrap {
    padding-right: 15px;
    padding-left: 15px;
}

.reports,
.orgs,
.reps {
    max-width: 1200px;
    margin: 30px auto;
    padding-left: 15px;
    padding-right: 15px;
}

.header-report,
.header {
    font-weight: bold;
    font-size: 36px;
}

#wrap > .header {
    margin-top: 30px;
}

.header-report {
    margin: 30px 15px 0 15px;
}

.reports-row,
.orgs-row,
.reps-row {
    display: flex;
    padding: 15px;
    border: 1px solid #dbdbdb;
    margin-top: 20px;
    box-shadow: 0 0 5px 0 rgb(0 0 0 / 10%);
    background-color: white;
}

:not(.reports-row) + .reports-row,
:not(.orgs-row) + .orgs-row,
:not(.reps-row) + .reps-row {
    margin-top: 0;
}

.object-row {
    display: flex;
    margin: 15px;
}

.reports-row-thumbnail,
.orgs-row-thumbnail,
.object-row-thumbnail {
    width: 180px;
    flex-grow: 0;
    flex-shrink: 0;
    line-height: 1;
}

.reports-row-thumbnail img,
.orgs-row-thumbnail img,
.object-row-thumbnail img {
    max-width: 150px;
}

.reports-row-metadata,
.orgs-row-metadata,
.reps-row-metadata,
.object-row-metadata {
    flex-grow: 1;
}

.reports-row-metadata > div,
.orgs-row-metadata > div,
.reps-row-metadata > div,
.object-row-metadata > div {
    display: flex;
    margin-bottom: 6px;
}

.reports-row-metadata > div:last-child,
.orgs-row-metadata > div:last-child,
.reps-row-metadata > div:last-child,
.reps-row-metadata > div:last-child {
    margin-bottom: 0;
}

.reports-row-metadata div div,
.orgs-row-metadata div div,
.object-row-metadata div div {
    margin-left: 20px;
}

.reports-row-metadata div div:first-child,
.orgs-row-metadata div div:first-child,
.reps-row-metadata div div:first-child,
.object-row-metadata div div:first-child {
    color: #777777;
    margin-left: 0;
    text-align: right;
    width: 120px;
    flex-grow: 0;
    flex-shrink: 0;
}

.reports-row-actions,
.orgs-row-actions,
.reps-row-actions {
    text-align: right;
    margin-left: 20px;
    flex-grow: 0;
    flex-shrink: 0;
}

.reports-row-actions div,
.orgs-row-actions div,
.reps-row-actions div {
    margin-bottom: 15px;
}

.orgs .orgs-header,
.reps .reps-header {
    display: flex;
    margin-bottom: 15px;
}

.reports-row-actions .button,
.orgs .button,
.reps .button {
    border-radius: 4px;
    color: white;
    display: inline-block;
}

.orgs .orgs-header .button,
.reps .reps-header .button {
    background-color: #5f585d;
    margin-left: auto;
    margin-top: auto;
    margin-bottom: auto;
    padding: 11px 12px;
}

.orgs .orgs-header .button:hover,
.reps .reps-header .button:hover {
    background-color: #464b6b;
}

.orgs .orgs-header .button .fas,
.reps .reps-header .button .fas,
.orgs .orgs-header .button .far,
.reps .reps-header .button .far {
    font-size: 14px;
    color: white;
    padding-right: 5px;
}

.reports .reports-row-actions .fas,
.orgs .orgs-row-actions .fas,
.reps .reps-row-actions .fas,
.reports .reports-row-actions .far,
.orgs .orgs-row-actions .far,
.reps .reps-row-actions .far {
    width: 35px;
    line-height: 35px;
    text-align: center;
    font-size: 20px;
    color: #747db3;
}

.reports .reports-row-actions .button:hover .fas,
.orgs .orgs-row-actions .button:hover .fas,
.reps .reps-row-actions .button:hover .fas,
.reports .reports-row-actions .button:hover .far,
.orgs .orgs-row-actions .button:hover .far,
.reps .reps-row-actions .button:hover .far {
    color: #464b6b;
}

.orgs .orgs-header .button:hover .fas,
.reps .orgs-header .button:hover .fas,
.orgs .orgs-header .button:hover .far,
.reps .orgs-header .button:hover .far {
    color: white;
}

.reports-header .table-cell {
    padding-top: 0;
}

.search {
    width: 800px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    color: #37559d;
}

.search a {
    color: #5165ff;
}

.search-header {
    display: grid;
    text-decoration: none;
    color: black;
    grid-template-columns: repeat(4, 200px);
    place-items: start;
    border-bottom: 2px solid #ccd2ff;
}

.search-row {
    display: grid;
    text-decoration: none;
    color: inherit;
    grid-template-columns: repeat(4, 200px);
    place-items: start;
    border-bottom: 2px solid #ccd2ff;
}

.search-row:hover, .search-row:focus {
    background: #f2f3ff;
    outline: none;
}

.half {
    display: inline-block;
    width: 40%;
}

#openseadragon-annotorious {
    display: flex;
    grid-row-start: 1;
    grid-column-start: 1;
    height: 800px;
    width: 800px;
    flex: 1;
    background-color: #f8f8f8;
    border: 1px solid #dbdbdb;
    border-top: none;
    border-left: none;
}

#openseadragon-annotorious-print {
    grid-row-start: 1;
    grid-column-start: 1;
    z-index: -1;
    height: 900px;
    width: 770px;
}

#annotation-viewer {
    display: grid;
}

#annotation-history {
    width: 210px;
    float: left;
    display: inline;
}

#annotation-history > button {
    height: 52px;
}

.annotation-history-timestamps {
    height: 800px;
    border: 1px solid #dbdbdb;
    border-top: none;
    border-left: none;
    overflow-y: scroll;
}

#annotation-viewer-full {
    width: 100%;
    height: 100%;
}

.openseadragon-canvas {
    outline: none;
}

.a9s-selection-mask {
    fill: rgba(0,0,0,0.4) !important;
    pointer-events: none;
}

#wrap {
    display: block;
    clear: both;
    float: none;
}

#report-navigation {
    display: flex;
    height: 51px;
    margin-top: 30px;
    margin-left: 1px;
    margin-right: 1px;
}

#report-navigation > button {
    box-shadow:none;
    border:none;
    background-color: #f8f8f8;
    border: 1px solid #dbdbdb;
    margin-left: -1px;
}
/* ... */

